--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <div id="top-section">
             <button>change grid size</button>
         </div>
-        <div id="container"></div>
+        <div id="bottom-section">
+            <div id="container"></div>
+        </div>
     </body>
 </html>
